--- a/settings.yaml
+++ b/settings.yaml
@@ -3,23 +3,23 @@ telegram:
   colonAfterSenderName: false
   skipOldMessages: true
   sendEmojiWithStickers: true
-  token: '714620453:AAFHr1iTO8lkYht2TPSlNBrKF-6wvAX5cNQ'
+  token: TELEGRAM_TOKEN
 discord:
   skipOldMessages: true
   useNickname: false
-  token: NTIwNDA0MTQxMjAyMzQxODk3.DutX3g.Lr5IrhjQ2G64td1HyWj6Wot35Ak
+  token: DISCORD_TOKEN
 debug: true
 bridges:
   - name: XP-Telegram
     direction: both
     telegram:
-      chatId: -1001483265150
+      chatId: -CHAT_ID
       relayJoinMessages: false
       relayLeaveMessages: false
       sendUsernames: true
     discord:
-      serverId: '343758193677172757'
-      channelId: '520404247859167235'
+      serverId: 'SERVER_ID'
+      channelId: 'CHANNEL_ID'
       relayJoinMessages: false
       relayLeaveMessages: false
       sendUsernames: true
